@@ -464,8 +464,8 @@ SieveSaslCramMd5Response.prototype.add
   
   if ((this.state == 0) && (parser.isString()))
   {
-    // The challange is contained within a string
-    this.challange = parser.extractString();
+    // The challenge is contained within a string
+    this.challenge = parser.extractString();
     this.state++;
     
     return;
@@ -485,13 +485,13 @@ SieveSaslCramMd5Response.prototype.add
 SieveSaslCramMd5Response.prototype.getState
   = function () { return this.state; }
 
-SieveSaslCramMd5Response.prototype.getChallange
+SieveSaslCramMd5Response.prototype.getChallenge
   = function ()
 {
   if (this.state < 1)
     throw "Illegal State, request not completed";
       
-  return this.challange; 
+  return this.challenge; 
 }
 
 SieveSaslCramMd5Response.prototype.getMessage
@@ -530,6 +530,86 @@ SieveSaslCramMd5Response.prototype.getResponseCode
   return this.superior.getResponseCode(); 
 }
 
+//*************************************
+function SieveSaslDigestMd5Response()
+{
+  this.superior = null;
+  this.state = 0;
+}
+
+SieveSaslDigestMd5Response.prototype.add
+  = function (data) 
+{
+  
+  var parser = new SieveResponseParser(data);
+  
+  if ((this.state == 0) && (parser.isString()))
+  {
+    // The challenge is contained within a string
+    this.challenge = parser.extractString();
+    this.state++;
+    
+    return;
+  }
+  
+  if (this.state == 1)
+  {
+    // Should be either a NO, BYE or OK
+    this.state = 4;
+    this.superior = new SieveAbstractResponse(parser);
+    return;
+  }
+    
+  throw 'Illegal State:'+this.state+' / '+data;
+}
+
+SieveSaslDigestMd5Response.prototype.getState
+  = function () { return this.state; }
+
+SieveSaslDigestMd5Response.prototype.getChallenge
+  = function ()
+{
+  if (this.state < 1)
+    throw "Illegal State, request not completed";
+      
+  return this.challenge; 
+}
+
+SieveSaslDigestMd5Response.prototype.getMessage
+  = function ()
+{
+  if (this.state != 4)
+    throw "Illegal State, request not completed";
+      
+  return this.superior.getMessage(); 
+}
+
+SieveSaslDigestMd5Response.prototype.hasError
+  = function () 
+{
+  if (this.state != 4)
+    throw "Illegal State, request not completed";
+    
+  return this.superior.hasError(); 
+}
+
+SieveSaslDigestMd5Response.prototype.getResponse
+  = function () 
+{
+  if (this.state != 4)
+    throw "Illegal State, request not completed";
+      
+  return this.superior.getResponse(); 
+}
+
+SieveSaslDigestMd5Response.prototype.getResponseCode
+  = function () 
+{
+  if (this.state != 4)
+    throw "Illegal State, request not completed";
+    
+  return this.superior.getResponseCode(); 
+}
 
 //*************************************
 function SieveSaslPlainResponse(data)
