@@ -1,3 +1,7 @@
+out-of-office (1.0.4)
+  * Fix bug on SASL LOGIN (authentication error)
+  * Clean code on requests/responses
+-- Sep 09 2011
 
 out-of-office (1.0.3)
   * Add Thunderbird 5 to 8 compatibility
